# wendigo

./: LICENSE  README-abandoned.txt  README.md  TODO-notes.md  TODO-notes.txt  TODO-packet-rewrite.txt  application.fam  plan.md  release-template.md  uart_hex_input.c  uart_text_input.c  wendigo_app.c  wendigo_app_i.h  wendigo_common_defs.h  wendigo_custom_event.h  wendigo_hex_input.c  wendigo_hex_input.h  wendigo_packet_offsets.h  wendigo_scan.h  wendigo_text_input.c  wendigo_text_input.h  wendigo_uart.c  wendigo_uart.h
Flipper/: .gitignore  CMakeLists.txt  application.fam  compile_commands.json  plan.md  wendigo_app.c  wendigo_app.h  wendigo_app_i.h  wendigo_common_defs.c  wendigo_common_defs.h  wendigo_custom_event.h  wendigo_hex_input.c  wendigo_hex_input.h  wendigo_packet_offsets.h  wendigo_pnl.c  wendigo_pnl.h  wendigo_scan.c  wendigo_scan.h  wendigo_text_input.c  wendigo_text_input.h  wendigo_uart.c  wendigo_uart.h
Flipper/scenes/: wendigo_scene.h  wendigo_scene_config.h  wendigo_scene_console_output.c  wendigo_scene_device_detail.c  wendigo_scene_device_list.c  wendigo_scene_help.c  wendigo_scene_hex_input.c  wendigo_scene_pnl_list.c  wendigo_scene_setup.c  wendigo_scene_setup_channel.c  wendigo_scene_setup_mac.c  wendigo_scene_start.c  wendigo_scene_status.c  wendigo_scene_text_input.c
docs/: CHANGELOG.md  ESP32-Wendigo-Commands.md  TODO-notes.md  (+3 more)
esp32/main/: CMakeLists.txt  Kconfig.projbuild  bluetooth.c  bluetooth.h  common.c  common.h  status.c  status.h  wendigo.c  wendigo.h  wendigo_common_defs.c  wendigo_common_defs.h  wendigo_main.c  wifi.c  wifi.h
(+29 files in other folders)
